fix overflow deck

--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@
     flex-direction: column;
     position: relative;
     overflow: hidden;
-  
+    min-width: 0;
 }
 
 
@@ -96,17 +96,24 @@
     display: flex;
 
     position: relative;
-    overflow-y: auto;
     width: 100%;
-    flex: 1;
+    flex: 1 0;
+    flex-basis: 0;
 
     min-height: 0;
+    min-width: 0;
 }
 .Centerstage {
     position: relative;
-    flex: 1;
+    flex: 1 1;
+    flex-basis: 0;
+    min-width: 0;
+    max-width: 100%;
 }
 
 .Aside {
+  flex: 0 1;
+  flex-basis: 0;
+
 }
 
