--- a/src/Components/Deck/Deck.css
+++ b/src/Components/Deck/Deck.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     min-height: 0;
     min-width: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .Deck__title {
@@ -14,7 +16,7 @@
 .Deck__instance {
     flex: 1;
     display: flex;
-    justify-content:     space-between;
+    justify-content: safe space-between;
     min-height: 0;
     flex-wrap: wrap;
 }
@@ -25,13 +27,14 @@
 
 .Deck {
     padding: 0.75rem;
+    max-width: 100%;
 }
 .Deck__instance {
     margin-top: 1rem;
     flex: 1 1;
     display: flex;
     flex-direction: column;
-    justify-content:     space-between;
+    justify-content: safe     space-between;
     min-height: 0;
     flex-wrap: nowrap;
 }
@@ -42,24 +45,30 @@
     padding: 0.5rem;
     flex: 1;
     max-height: 4rem;
+    max-width: 100%;
 }
 .Deck__titleContainer__titleContainer {
     display: flex;
-    justify-content:     center;
-    align-items: center;
+    justify-content: safe center;
+    align-items: safe center;
     font-weight: bold;
-    flex-wrap: wrap;
+    max-width: 100%;
 }
 .Deck__titleContainer__title {
     padding-left: 0.25rem;
     font-size: 1rem;
     font-weight: normal;
     max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .Deck__titleContainer__metaContainer {
     display: flex;
-    justify-content:     space-between;
-    align-items: center;
+    justify-content: safe space-between;
+    align-items: safe center;
 }
 .Deck__titleContainer__metaContainer__metaTitle {
     font-weight: bold;
@@ -77,8 +86,8 @@
     width: 100%;
     padding: 1rem;
     display: flex;
-    justify-content:     flex-start;
-    align-items: flex-start;
+    justify-content: safe     flex-start;
+    align-items: safe flex-start;
     flex-wrap: wrap;
 }
 
@@ -86,8 +95,8 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    justify-content:     center;
-    align-items: center;
+    justify-content: safe     center;
+    align-items: safe center;
 }
 .SymbolDecks__deck:hover {
     cursor: pointer;
@@ -135,8 +144,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content:     center;
-    align-items: center;
+    justify-content: safe     center;
+    align-items: safe center;
 }
 .SymbolDecks__noDecksMsg {
     font-size: 3.5rem;
@@ -166,8 +175,8 @@
     letter-spacing: 3px;
     
     display: flex;
-    justify-content:     center;
-    align-items: center;
+    justify-content: safe     center;
+    align-items: safe center;
 
     padding: 1rem;
     width: 12rem;
